--- a/taskDay14.html
+++ b/taskDay14.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/0/747.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/taskDay14.css">
 </head>
@@ -28,12 +29,86 @@
             <i class="ri-search-line"></i>
             <i class="ri-shopping-bag-line"></i>
         </nav>
-        <div id="center">
+        <div class="center" id="image1">
             <h1>iPhone 17 pro</h1>
             <h4>All Out Pro </h4>
-            <div id="link">
-                <button>Learn more</button>
-                <button>Buy</button>
+            <div class="link">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+            </div>
+        </div>
+        <div class="center" id="image2">
+            <h1>iPhone Air</h1>
+            <h4>The thinnest iPhone ever. <br> With the power of pro inside.</h4>
+            <div class="link">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+            </div>
+        </div>
+        <div class="center" id="image3">
+            <h1>MacBook Pro 14"</h1>
+            <h4>Supercharged M5.</h4>
+            <div class="link">
+                <button class="learn">Learn more</button>
+                <button class="buy">Buy</button>
+            </div>
+        </div>
+
+        <!-- main 2 -->
+
+        <div id="main2">
+            <div class="box" id="box1">
+                
+                <h1><i class="ri-apple-fill"></i><b>Watch</b> series 11</h1>
+                <h4>The ultimate way to watch your health.</h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+
+            <div class="box" id="box2">
+                <h1>iPad Pro</h1>
+                <h4>Advanced AI performance <br> and game-changing capabilities</h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+            <div class="box" id="box3">
+                <h1>AirPods Pro 3</h1>
+                <h4>The world's best in-ear <br> Active Noise Cancellation</h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+
+            <div class="box" id="box4">
+                <h1>MacBook Air</h1>
+                <h4>Sky blue color <br> sky high performance with M4</h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+
+            <div class="box" id="box5">
+                <h1><i class="ri-apple-fill"></i>Tradee In</h1>
+                <h4>Get up to $200-$700 <br> in credit when you trade in <br> iPhone 13 or higher.<sup>1</sup></h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
+            </div>
+
+            <div class="box" id="box6">
+                <h1><i class="ri-apple-fill"></i>Card</h1>
+                <h4>Get up to 3% Daily Cash back <br> with every purchase</h4>
+                <div class="link1">
+                    <button class="learn">Learn more</button>
+                    <button class="buy">Buy</button>
+                </div>
             </div>
         </div>
     </div>
